samples/_failures_safe/1761186908_bf066b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cf6fb7b5.c:170:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  170 | int evaluate_
      | ^~~
